overlays/dev/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: codeblue-web
